fix carousel not responsive on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,33 +20,37 @@ main {
     margin: 0.1rem;
   }
   
-  /* carousel */
-  .carousel-item-next,
-  .carousel-item-prev,
-  .carousel-item.active {
-    display: flex;
-  }
-  .carousel-caption {
-    position: absolute;
-    top: 0;
-  }
-  
+/* carousel */
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+  display: flex;
+}
+.carousel-caption {
+  position: absolute;
+  top: 0;
+  padding: 10px;
+  box-sizing: border-box;
+}
+ 
+.carousel-caption h2 {
+  color: #fff;
+}
+ 
+.carousel img {
+  height: 300px;
+  padding: 40px;
+  margin: 40px;
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.carousel a {
+  margin: 0 auto;
+}
+ 
+@media (max-width: 900px) {
   .carousel-caption h2 {
-    color: #fff;
+    font-size: 3vw;
   }
-  
-  .carousel img {
-    height: 300px;
-    padding: 30px;
-    margin: 40px;
-    border-radius: 50%;
-  }
-  .carousel a {
-    margin: 0 auto;
-  }
-
-  @media (max-width: 900px) {
-    .carousel-caption h2 {
-      font-size: 3vw;
-    }
-  }
+}
